package AlmacenDownTop;

public class Vista {
}
