@startuml
'https://plantuml.com/class-diagram

Almacén -- Producto
Vista -- Almacén

class Vista {
    -almacén : Almacén
    -menuOpciones() : int
    -addProducto()
    -removeProducto()
    -setProducto()
    -listProducto()
    -getCantidadProductos() : int
}


class Almacén {
    -List<Producto> productos
    +add(Producto) : int
    +remove(Producto) : int
    +set(Producto) : int
    +get(Producto) : Producto
    +size() : int
}

class Producto {
    -id : int
    -nombre : String
    -precio : float
    -existencias : int

    +Producto(id, nombre, precio, existencias)
    +Getters() & Setters()
    +String toString()
    +Producto clone()
    +boolean equals(producto)
}

@enduml